# stirling

./: Cargo.toml  LICENSE  bench.txt  build.rs  fastness.txt  readme.md  supported.md
src/: builtin.rs  disassemble.rs  hir_check.rs  hir_expr.rs  hir_item.rs  hir_items.rs  jit.rs  main.rs  profiler.rs  types.rs  vm.rs
src/builtin/: builtin.rs  mod.rs
src/hir/: _types.rs  check.rs  func.rs  infer.rs  item.rs  mod.rs  types.rs  var_storage.rs
src/hir/types/: common.rs  global.rs  mod.rs
src/vm/: _exec_match.txt  compiler.rs  exec.rs  exec_native.rs  instr.rs  mod.rs
test/: _skitter_builtin.rs  add  add.lua  add.rs  as_bool.rs  as_char.rs  as_float.rs  as_unknown.rs  blocks.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  main.rs  print_nums.rs  refs.rs  refs2.rs  run.sh  test.sh  void_assignments.rs  what.rs
test/0_prim/: i32.rs  never.rs  void.rs  void_assign.rs
test/1_ctrl/: break_never.rs  loop_ret.rs  return.rs  while.rs
test/2_compound/: refs.rs  tuple.rs  tuple_zst.rs
test/5_program/: dumb_bench.rs  dumb_primes.rs
test/_disabled/: tuples.rs
test/misc/: print.rs
test/primitive/: as_float.rs
