[package]
name = "ziz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.86", features=["full","visit","extra-traits"]}
once_cell = "1.9.0"

cranelift = "0.81.0"
cranelift-module = "0.81.0"
cranelift-jit = "0.81.0"
