[package]
name = "stirling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.86", features=["full","visit","extra-traits"]}
once_cell = "1.9.0"
memoffset = "0.6.5"

cranelift = "0.82.1"
cranelift-module = "0.82.1"
cranelift-jit = "0.82.1"

[dependencies.iced-x86]
version = "1.17.0"
default-features = false
features = ["std", "decoder", "intel"]
